infra/envoy-gateway/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
