infra/envoy-gateway/templates/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: main-gateway
      namespace: envoy-gateway-system
  hostnames:
    - argocd.semops.ru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''	
          kind: Service
          name: argocd-server
          port: 80 
          weight: 1
